--- a/Python Assignment 2.ipynb
+++ b/Python Assignment 2.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter Text: hello\n",
-      "Reverse order of input received is  olleh\n"
+      "Enter Text: ineuron\n",
+      "Reverse order of input received is  norueni\n"
      ]
     }
    ],
